Исправить bug-13 (https://github.com/Eugenpak/java-filmorate/pull/12#discussion_r2049438536).